--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "pisapopa4",
+  "name": "name",
   "module": "index.ts",
   "type": "module",
   "private": true,
   "devDependencies": {
+    "@biomejs/biome": "2.3.7",
     "@types/bun": "latest"
   },
   "peerDependencies": {
@@ -12,6 +13,8 @@
   "dependencies": {
     "drizzle-kit": "^0.31.7",
     "drizzle-orm": "^0.44.7",
-    "pg": "^8.16.3"
+    "elysia": "^1.4.16",
+    "pg": "^8.16.3",
+    "zod": "^4.1.13"
   }
 }
