--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "drizzle": "^1.4.0",
     "drizzle-kit": "^0.31.7",
     "drizzle-orm": "^0.44.7",
     "elysia": "^1.4.16",
